Renaming title bar header

--- a/src/main/webapp/resources/modules/templates/header/header.html
+++ b/src/main/webapp/resources/modules/templates/header/header.html
@@ -4,8 +4,8 @@
       <div class="site-header clearfix">
         <div class="col-lg-3 col-md-3 col-sm-12 title-area">
           <div class="site-title" id="title">
-            <a href="#/home" title="">
-              <h4><img src="/resources/img/sonai.jpg"/ width="30px;">&nbsp;&nbsp;&nbsp;SONAI<div><span style="">Dairy Management System</span></div></h4>
+            <a href="" title="">
+              <h4><img src="/resources/img/iconheader.jpg"/ width="30px;" style="float:left;">&nbsp;&nbsp;&nbsp;DMS<div><span style="">Dairy Management System</span></div></h4>
             </a>
           </div>
         </div>
