--- a/src/main/webapp/resources/modules/maintainListing/views/supplier/supplier.html
+++ b/src/main/webapp/resources/modules/maintainListing/views/supplier/supplier.html
@@ -60,6 +60,12 @@
 	 			</div>
 	 			<div class="form-group">
 	 				<div class="col-md-8">
+	 				<label for="name">Username</label>
+	 				<input type="text" class="form-control" placeholder="Enter Email" required="required">
+	 				</div>
+	 			</div>
+	 			<div class="form-group">
+	 				<div class="col-md-8">
 	 				<label for="name">Password</label>
 	 				<input type="password" class="form-control" placeholder="Enter Password" required="required">
 	 				</div>
