--- a/src/main/webapp/resources/modules/maintainListing/views/supplier/supplier.html
+++ b/src/main/webapp/resources/modules/maintainListing/views/supplier/supplier.html
@@ -61,7 +61,7 @@
 	 			<div class="form-group">
 	 				<div class="col-md-8">
 	 				<label for="name">Username</label>
-	 				<input type="text" class="form-control" placeholder="Enter Email" required="required">
+	 				<input type="text" class="form-control" placeholder="Enter username" required="required">
 	 				</div>
 	 			</div>
 	 			<div class="form-group">
