--- a/bin/src/main/webapp/resources/modules/dairyListing/views/dairyList.html
+++ b/bin/src/main/webapp/resources/modules/dairyListing/views/dairyList.html
@@ -8,7 +8,7 @@
 
 </style>
 <body>
-<government-listing-header/>
+<header-bar/>
  <div id="wrapper">
 <div id="content-wrapper">
 <div class="container-fluid">
