--- a/src/main/webapp/resources/modules/dairyListing/views/dairyDetailHome.html
+++ b/src/main/webapp/resources/modules/dairyListing/views/dairyDetailHome.html
@@ -8,7 +8,7 @@
 
 </style>
 <body>
-<header-bar/>
+<government-listing-header/>
  <div id="wrapper">
 <div id="content-wrapper">
 <div class="container-fluid">
